--- a/Codigo/Frota/FrotaWeb/Views/Shared/_Layout.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/Shared/_Layout.cshtml
@@ -63,7 +63,9 @@
 								</a>
 							</li>
 							<li>
-								<a href="#"><i class="fa fa-tag mr-3"></i>Marcas de Veículos</a>
+								<a class="nav-link" asp-area="" asp-controller="MarcaVeiculo" asp-action="Index">
+									<i class="fa fa-tag mr-3"></i>Marcas de Veículo
+								</a>
 							</li>
 							<li>
 								<a class="nav-link" asp-area="" asp-controller="ModeloVeiculo" asp-action="Index">
