--- a/Codigo/Frota/FrotaWeb/Views/Veiculo/Delete.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/Veiculo/Delete.cshtml
@@ -13,13 +13,13 @@
         <div class="row mb-3">
             <div class="col-md-6">
                 <div class="type-container offset-md-1 itens-center">
-                    <label class="label">Unidade Administrativa:</label>
+                    <label class="label">Unidade Administrativa</label>
                     <p>@Model.IdUnidadeAdministrativa</p>
                 </div>
             </div>
             <div class="col-md-6">
-                <div class="type-container itens-center">
-                    <label class="label">Frota:</label>
+                <div class="type-container offset-md-2 itens-center">
+                    <label class="label">Frota</label>
                     <p>@Model.IdFrota</p>
                 </div>
             </div>
@@ -27,13 +27,13 @@
         <div class="row mb-3">
             <div class="col-md-6">
                 <div class="type-container offset-md-1 itens-center">
-                    <label class="label">Placa:</label>
+                    <label class="label">Placa</label>
                     <p>@Model.Placa</p>
                 </div>
             </div>
             <div class="col-md-6">
-                <div class="type-container itens-center">
-                    <label class="label">Chassi:</label>
+                <div class="type-container offset-md-2 itens-center">
+                    <label class="label">Chassi</label>
                     <p>@Model.Chassi</p>
                 </div>
             </div>
@@ -41,13 +41,13 @@
         <div class="row mb-3">
             <div class="col-md-6">
                 <div class="type-container offset-md-1 itens-center">
-                    <label class="label">Valor do Veículo:</label>
+                    <label class="label">Valor do Veículo</label>
                     <p>@Model.Valor</p>
                 </div>
             </div>
             <div class="col-md-6">
-                <div class="type-container itens-center">
-                    <label class="label">Modelo Veículo:</label>
+                <div class="type-container offset-md-2 itens-center">
+                    <label class="label">Modelo Veículo</label>
                     <p>@Model.IdModeloVeiculo</p>
                 </div>
             </div>
@@ -55,13 +55,13 @@
         <div class="row mb-3">
             <div class="col-md-6">
                 <div class="type-container offset-md-1 itens-center">
-                    <label class="label">Data Referência (Valor):</label>
+                    <label class="label">Data Referência (Valor)</label>
                     <p>@Model.DataReferenciaValor</p>
                 </div>
             </div>
             <div class="col-md-6">
-                <div class="type-container itens-center">
-                    <label class="label">Cor:</label>
+                <div class="type-container offset-md-2 itens-center">
+                    <label class="label">Cor</label>
                     <p>@Model.Cor</p>
                 </div>
             </div>
@@ -69,13 +69,13 @@
         <div class="row mb-3">
             <div class="col-md-6">
                 <div class="type-container offset-md-1 itens-center">
-                    <label class="label">Odômetro:</label>
+                    <label class="label">Odômetro</label>
                     <p>@Model.Odometro</p>
                 </div>
             </div>
             <div class="col-md-6">
-                <div class="type-container itens-center">
-                    <label class="label">Status:</label>
+                <div class="type-container offset-md-2 itens-center">
+                    <label class="label">Status</label>
                     <p>@Model.Status</p>
                 </div>
             </div>
@@ -83,13 +83,13 @@
         <div class="row mb-3">
             <div class="col-md-6">
                 <div class="type-container offset-md-1 itens-center">
-                    <label class="label">Ano:</label>
+                    <label class="label">Ano</label>
                     <p>@Model.Ano</p>
                 </div>
             </div>
             <div class="col-md-6">
-                <div class="type-container itens-center">
-                    <label class="label">Modelo:</label>
+                <div class="type-container offset-md-2 itens-center">
+                    <label class="label">Modelo</label>
                     <p>@Model.Modelo</p>
                 </div>
             </div>
@@ -97,13 +97,13 @@
         <div class="row mb-3">
             <div class="col-md-6">
                 <div class="type-container offset-md-1 itens-center">
-                    <label class="label">Renavan:</label>
+                    <label class="label">Renavan</label>
                     <p>@Model.Renavan</p>
                 </div>
             </div>
             <div class="col-md-6">
-                <div class="type-container itens-center">
-                    <label class="label">Vencimento Ipva:</label>
+                <div class="type-container offset-md-2 itens-center">
+                    <label class="label">Vencimento Ipva</label>
                     <p>@Model.VencimentoIpva</p>
                 </div>
             </div>
@@ -113,7 +113,7 @@
                 <a asp-action="Index" class="my-button btn btn-danger btn-sm w-50 w-md-auto">Voltar</a>
             </div>
             <div class="col-12 col-md-6 d-flex justify-content-md-end itens-center">
-                <input type="submit" value="Excluir" class="my-button btn btn-success btn-sm w-50 w-md-auto" />
+                <input type="submit" value="Excluir" class="my-button btn btn-success btn-sm w-50 w-md-auto botao-sucesso" />
             </div>
         </form>
     </div>
