--- a/Codigo/Frota/FrotaWeb/Views/ModeloVeiculo/Create.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/ModeloVeiculo/Create.cshtml
@@ -1,48 +1,55 @@
 ﻿@model FrotaWeb.Models.ModeloVeiculoViewModel
 
-@{
-    ViewData["Title"] = "Adicionar Modelo de Veiculo";
-}
 
-<h1>Adicionar</h1>
+<link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+<link rel="stylesheet" href="~/css/form.css" asp-append-version="true" />
 
-<h4>Modelo de Veiculo</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Id" class="control-label"></label>
-                <input asp-for="Id" class="form-control" />
-                <span asp-validation-for="Id" class="text-danger"></span>
+<main class="container mt-4">
+    <h4 class="page-title fs-2">
+        <i class="fa fa-car mr-3"></i>
+        Modelo Veículo
+    </h4>
+    <h1 class="my-text-label fs-3 mt-4 mb-4">Novo Modelo Veículo</h1>
+    <form asp-action="Create" class="creator-form fs-5">
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <div class="row mb-3">
+            <div class="col-md-6">
+                <div class="type-container offset-md-1 itens-center">
+                    <label asp-for="IdMarca" class="label">Marca</label>
+                    <input asp-for="IdMarca" class="form-control" placeholder="Marca" />
+                    <span asp-validation-for="IdMarca" class="text-danger"></span>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="IdMarca" class="control-label"></label>
-                <input asp-for="IdMarca" class="form-control" />
-                <span asp-validation-for="IdMarca" class="text-danger"></span>
+            <div class="col-md-6">
+                <div class="type-container offset-md-2 itens-center">
+                    <label asp-for="Nome" class="label">Nome</label>
+                    <input asp-for="Nome" class="form-control" placeholder="Nome" />
+                    <span asp-validation-for="Nome" class="text-danger"></span>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="Nome" class="control-label"></label>
-                <input asp-for="Nome" class="form-control" />
-                <span asp-validation-for="Nome" class="text-danger"></span>
+        </div>
+        <div class="row mb-3">
+            <div class="col-md-6">
+                <div class="type-container offset-md-1 itens-center">
+                    <label asp-for="CapacidadeTanqueCombustivel" class="label">Capacidade do Tanque</label>
+                    <input asp-for="CapacidadeTanqueCombustivel" class="form-control" placeholder="80 L" />
+                    <span asp-validation-for="CapacidadeTanqueCombustivel" class="text-danger"></span>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="CapacidadeTanqueCombustivel" class="control-label"></label>
-                <input asp-for="CapacidadeTanqueCombustivel" class="form-control" />
-                <span asp-validation-for="CapacidadeTanqueCombustivel" class="text-danger"></span>
+        </div>
+        <div class="row mt-4">
+            <div class="col-12 col-md-6 mb-2 mb-md-0 itens-center">
+                <a asp-action="Index" class="my-button btn btn-danger btn-sm w-50 w-md-auto">Voltar</a>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Salvar" class="btn btn-primary" style="background-color:#08448c" />
+            <div class="col-12 col-md-6 d-flex justify-content-md-end itens-center">
+                <button type="submit" value="Create" class="my-button btn btn-success btn-sm w-50 w-md-auto botao-sucesso">Cadastrar</button>
             </div>
-        </form>
-    </div>
-</div>
-
-<div>
-    <a asp-action="Index" class="btn btn-secondary">Voltar</a>
-</div>
-
+        </div>
+    </form>
+</main>
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    <script src="~/js/form.js" asp-append-version="true"></script>
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
