--- a/Codigo/Frota/FrotaWeb/Views/ModeloVeiculo/Index.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/ModeloVeiculo/Index.cshtml
@@ -1,55 +1,42 @@
 ﻿@model IEnumerable<FrotaWeb.Models.ModeloVeiculoViewModel>
 
-@{
-    ViewData["Title"] = "Cadastro de Modelo de Veiculo";
-}
+<link rel="stylesheet" href="~/css/form.css" asp-append-version="true" />
 
-
-<h1>Cadastro de Modelo de Veiculos</h1>
-
-<p>
-    <a asp-action="Create" class="btn btn-primary" style="background-color:#08448c">Adicionar Novo</a>
-</p>
-<table class="table table-striped table-bordered" style="width:100%">
-    
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Id)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.IdMarca)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Nome)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.CapacidadeTanqueCombustivel)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Id)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.IdMarca)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Nome)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CapacidadeTanqueCombustivel)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new {  id=item.Id  }) |
-                @Html.ActionLink("Details", "Details", new {  id=item.Id }) |
-                @Html.ActionLink("Delete", "Delete", new {  id=item.Id })
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+<main class="container mt-4">
+    <div class="table-responsive">
+        <table class="table tabela-listra table-hover table-bordered">
+            <thead>
+                <tr>
+                    <th>@Html.DisplayNameFor(model => model.IdMarca)</th>
+                    <th>@Html.DisplayNameFor(model => model.Nome)</th>
+                    <th>@Html.DisplayNameFor(model => model.CapacidadeTanqueCombustivel)</th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody id="tableBody">
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>@Html.DisplayFor(modelItem => item.IdMarca)</td>
+                        <td>@Html.DisplayFor(modelItem => item.Nome)</td>
+                        <td>@Html.DisplayFor(modelItem => item.CapacidadeTanqueCombustivel)</td>
+                        <td>
+                            <a href="@Url.Action("Edit", "ModeloVeiculo", new { id = item.Id })" class="edit" title="Editar" data-toggle="tooltip">
+                                <i class="fa fa-pencil-alt cor" aria-hidden="true"></i>
+                            </a>
+                            <a href="@Url.Action("Details", "ModeloVeiculo", new { id = item.Id })" class="details" title="Detalhes" data-toggle="tooltip">
+                                <i class="fa fa-eye cor" aria-hidden="true"></i>
+                            </a>
+                            <a href="@Url.Action("Delete", "ModeloVeiculo", new { id = item.Id })" class="delete" title="Excluir" data-toggle="tooltip">
+                                <i class="fa fa-trash cor" aria-hidden="true"></i>
+                            </a>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+    <div>
+        <a asp-action="Create" class="btn btn-primary">Adicionar</a>
+    </div>
+</main>
