--- a/Codigo/Frota/FrotaWeb/Views/Veiculo/Index.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/Veiculo/Index.cshtml
@@ -1,9 +1,8 @@
 @model IEnumerable<FrotaWeb.Models.VeiculoViewModel>
 
 <link rel="stylesheet" href="~/css/form.css" asp-append-version="true" />
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
 
-<div class="container mt-4">
+<main class="container mt-4">
 	<div class="table-responsive">
 		<table class="table tabela-listra table-hover table-bordered">
 			<thead>
@@ -40,4 +39,4 @@
 	<div>
 		<a asp-action="Create" class="btn btn-primary">Adicionar</a>
 	</div>
-</div>
+</main>
