--- a/Codigo/Frota/FrotaWeb/Views/PecaInsumo/Delete.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/PecaInsumo/Delete.cshtml
@@ -6,9 +6,9 @@
 <main class="container mt-4">
     <h4 class="page-title fs-2">
         <i class="fa fa-cog mr-3"></i>
-        Peça Insumo
+        Peças e Insumos
     </h4>
-    <h1 class="my-text-label fs-3 mt-4 mb-4">Excluir Peça Insumo</h1>
+    <h1 class="my-text-label fs-3 mt-4 mb-4">Excluir Peças e Insumos</h1>
     <div class="creator-form fs-5">
         <div class="row mb-3">
             <div class="col-md-6">
