--- a/Codigo/Frota/FrotaWeb/Views/PecaInsumo/Details.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/PecaInsumo/Details.cshtml
@@ -6,9 +6,9 @@
 <main class="container mt-4">
     <h4 class="page-title fs-2">
         <i class="fa fa-cog mr-3"></i>
-        Peça Insumo
+        Peças e Insumos
     </h4>
-    <h1 class="my-text-label fs-3 mt-4 mb-4">Visualizar Peça Insumo</h1>
+    <h1 class="my-text-label fs-3 mt-4 mb-4">Visualizar Peças e Insumos</h1>
     <div class="creator-form fs-5">
         <div class="row mb-3">
             <div class="col-md-6">
@@ -23,7 +23,7 @@
                 <a asp-action="Index" class="my-button btn btn-danger btn-sm w-50 w-md-auto">Voltar</a>
             </div>
             <div class="col-12 col-md-6 d-flex justify-content-md-end itens-center">
-                <a href="@Url.Action("Edit", "Pecainsumo", new { id = Model.Id })" class="my-button btn btn-success btn-sm w-50 w-md-auto botao-sucesso">Editar</a>
+                <a href="@Url.Action("Edit", "PecaInsumo", new { id = Model.Id })" class="my-button btn btn-success btn-sm w-50 w-md-auto botao-sucesso">Editar</a>
             </div>
         </div>
     </div>
