--- a/Codigo/Frota/FrotaWeb/Views/PecaInsumo/Edit.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/PecaInsumo/Edit.cshtml
@@ -6,9 +6,9 @@
 <main class="container mt-4">
 	<h4 class="page-title fs-2">
 		<i class="fa fa-cog mr-3"></i>
-		Peça Insumo
+		Peças e Insumos
 	</h4>
-	<h1 class="my-text-label fs-3 mt-4 mb-4">Editar Peça Insumo</h1>
+	<h1 class="my-text-label fs-3 mt-4 mb-4">Editar Peças e Insumos</h1>
 	<form asp-action="Edit" class="creator-form fs-5">
 		<div asp-validation-summary="ModelOnly" class="text-danger"></div>
 		<div class="row mb-3">
