--- a/Codigo/Frota/FrotaWeb/Views/MarcaPecaInsumo/Index.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/MarcaPecaInsumo/Index.cshtml
@@ -1,76 +1,38 @@
 ﻿@model IEnumerable<FrotaWeb.Models.MarcaPecaInsumoViewModel>
 
-@{
-    ViewData["Title"] = "Listagem de marcas das peças e insumos";
-}
-
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
 <link rel="stylesheet" href="~/css/form.css" asp-append-version="true" />
 
-<div class="container-xl">
-    <h1>Listagem de marcas das peças e insumos</h1>
-    <a asp-action="Create" class="btn btn-primary">Novo registro</a>
+<main class="container mt-4">
     <div class="table-responsive">
-        <div class="table-wrapper">
-            <div class="table-title">
-                <div class="row">
-                    <div class="col-sm-8">
-                        <h2>Marcas das peças e insumos</h2>
-                    </div>
-                    <div class="col-sm-4">
-                        <div class="search-box">
-                            <i class="material-icons">&#xE8B6;</i>
-                            <input type="text" class="form-control" placeholder="Pesquisar&hellip;">
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <table class="table table-striped table-hover table-bordered">
-                <thead>
+        <table class="table tabela-listra table-hover table-bordered">
+            <thead>
+                <tr>
+                    <th>@Html.DisplayNameFor(model => model.Descricao)</th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody id="tableBody">
+                @foreach (var item in Model)
+                {
                     <tr>
-                        <th>#</th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.Descricao)
-                        </th>
+                        <td>@Html.DisplayFor(modelItem => item.Descricao)</td>
+                        <td>
+                            <a href="@Url.Action("Edit", "MarcaPecaInsumo", new { id = item.Id })" class="edit" title="Editar" data-toggle="tooltip">
+                                <i class="fa fa-pencil-alt cor" aria-hidden="true"></i>
+                            </a>
+                            <a href="@Url.Action("Details", "MarcaPecaInsumo", new { id = item.Id })" class="details" title="Detalhes" data-toggle="tooltip">
+                                <i class="fa fa-eye cor" aria-hidden="true"></i>
+                            </a>
+                            <a href="@Url.Action("Delete", "MarcaPecaInsumo", new { id = item.Id })" class="delete" title="Excluir" data-toggle="tooltip">
+                                <i class="fa fa-trash cor" aria-hidden="true"></i>
+                            </a>
+                        </td>
                     </tr>
-                </thead>
-                <tbody>
-                    @foreach (var item in Model)
-                    {
-                        <tr>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Id)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Descricao)
-                            </td>
-                            <td>
-                                <a href="@Url.Action("Edit", new { id=item.Id })" class="edit" title="Editar" data-toggle="tooltip">
-                                    <i class="fa fa-pencil-alt acoes" aria-hidden="true"></i>
-                                </a>
-                                <a href="@Url.Action("Details", new { id=item.Id })" class="details" title="Detalhes" data-toggle="tooltip">
-                                    <i class="fa fa-eye acoes" aria-hidden="true"></i>
-                                </a>
-                                <a href="@Url.Action("Delete", new { id=item.Id })" class="delete" title="Excluir" data-toggle="tooltip">
-                                    <i class="fa fa-trash acoes" aria-hidden="true" ></i>
-                                </a>
-                            </td>
-                        </tr>
-                    }
-                </tbody>
-            </table>
-            <div class="clearfix">
-                <div class="hint-text">Mostrando <b>@Model.Count()</b> registros</div>
-                <ul class="pagination">
-                    <li class="page-item disabled"><a href="#"><i class="fa fa-angle-double-left"></i></a></li>
-                    <li class="page-item active"><a href="#" class="page-link">1</a></li>
-                    <li class="page-item"><a href="#" class="page-link">2</a></li>
-                    <li class="page-item"><a href="#" class="page-link">3</a></li>
-                    <li class="page-item"><a href="#" class="page-link">4</a></li>
-                    <li class="page-item"><a href="#" class="page-link">5</a></li>
-                    <li class="page-item"><a href="#" class="page-link"><i class="fa fa-angle-double-right"></i></a></li>
-                </ul>
-            </div>
-        </div>
+                }
+            </tbody>
+        </table>
     </div>
-</div>
+    <div>
+        <a asp-action="Create" class="btn btn-primary">Adicionar</a>
+    </div>
+</main>
