--- a/Codigo/Frota/FrotaWeb/Views/Vistoria/Details.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/Vistoria/Details.cshtml
@@ -1,48 +1,50 @@
 ﻿@model FrotaWeb.Models.VistoriaViewModel
 
-@{
-    ViewData["Title"] = "Details";
-}
+<link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+<link rel="stylesheet" href="~/css/form.css" asp-append-version="true" />
 
-<h1>Details</h1>
-
-<div>
-    <h4>VistoriaViewModel</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Id)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Id)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Data)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Data)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Problemas)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Problemas)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Tipo)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Tipo)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IdPessoaResponsavel)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IdPessoaResponsavel)
-        </dd>
-    </dl>
-</div>
-<div>
-    @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
-    <a asp-action="Index">Back to List</a>
-</div>
+<main class="container mt-4">
+	<h4 class="page-title fs-2">
+		<i class="fa fa-clipboard-check mr-3"></i>
+		Vistoria
+	</h4>
+	<h1 class="my-text-label fs-3 mt-4 mb-4">Visualizar Vistoria</h1>
+	<div class="creator-form fs-5">
+		<div class="row mb-3">
+			<div class="col-md-6">
+				<div class="type-container offset-md-1 itens-center">
+					<label class="label">Data</label>
+					<p>@Model.Data</p>
+				</div>
+			</div>
+			<div class="col-md-6">
+				<div class="type-container offset-md-2 itens-center">
+					<label class="label">Problemas</label>
+					<p>@Model.Problemas</p>
+				</div>
+			</div>
+		</div>
+		<div class="row mb-3">
+			<div class="col-md-6">
+				<div class="type-container offset-md-1 itens-center">
+					<label class="label">Tipo</label>
+					<p>@Model.Tipo</p>
+				</div>
+			</div>
+			<div class="col-md-6">
+				<div class="type-container offset-md-2 itens-center">
+					<label class="label">Responsável</label>
+					<p>@Model.IdPessoaResponsavel</p>
+				</div>
+			</div>
+		</div>
+		<div class="row mt-4">
+			<div class="col-12 col-md-6 mb-2 mb-md-0 itens-center">
+				<a asp-action="Index" class="my-button btn btn-danger btn-sm w-50 w-md-auto">Voltar</a>
+			</div>
+			<div class="col-12 col-md-6 d-flex justify-content-md-end itens-center">
+				<a href="@Url.Action("Edit", "Vistoria", new { id = Model.Id })" class="my-button btn btn-success btn-sm w-50 w-md-auto botao-sucesso">Editar</a>
+			</div>
+		</div>
+	</div>
+</main>
