--- a/Codigo/Frota/FrotaWeb/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Codigo/Frota/FrotaWeb/Areas/Identity/Pages/Account/Login.cshtml
@@ -4,7 +4,28 @@
 @{
     ViewData["Title"] = "FrotaWeb";
 }
+<head>
 
+    <style>
+        header, #sidebar {
+            display: none;
+        }
+
+        body {
+            background: linear-gradient(50deg, white 95%, #08448c 5%);
+        }
+
+        footer {
+            background-color: #08448c;
+        }
+
+    </style>
+
+</head>
+
+<br>
+<br>
+<br>
 <h1>@ViewData["Title"]</h1>
 <div class="row">
     <div class="col-md-4">
