--- a/Codigo/Frota/FrotaWeb/wwwroot/css/site.css
+++ b/Codigo/Frota/FrotaWeb/wwwroot/css/site.css
@@ -1,50 +1,49 @@
 :root {
-  --bg: #03438b;
-  --fg: #ffffff;
-  --grey: #c0c0c0;
+    --bg: #03438b;
+    --fg: #ffffff;
+    --grey: #c0c0c0;
 }
 
 * {
-    margin: 0px;
-    padding: 0px;
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
 
+/* Melhorar a organização do media query */
 html {
-  font-size: 14px;
+    font-size: 14px;
+    position: relative;
+    min-height: 100%;
 }
 
 @media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
-}
-
-html {
-  position: relative;
-  min-height: 100%;
+    html {
+        font-size: 16px;
+    }
 }
 
 body {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
+    min-height: 100vh;
 }
 
 .my-button {
-  color: var(--fg);
-  border: none;
-  display: flex;
-  padding: 15px 0px;
-  min-width: 200px;
-  font-weight: bold;
-  align-items: center;
-  border-radius: 5px;
-  justify-content: center;
-  background-color: var(--bg);
+    color: var(--fg);
+    border: none;
+    display: flex;
+    padding: 15px 0px;
+    min-width: 200px;
+    font-weight: bold;
+    align-items: center;
+    border-radius: 5px;
+    justify-content: center;
+    background-color: var(--bg);
 }
 
-.my-button > span {
-  font-variation-settings: 'FILL' 1, 'wght' 400, 'GRAD' 0, 'opsz' 24;
-}
+    .my-button > span {
+        font-variation-settings: 'FILL' 1, 'wght' 400, 'GRAD' 0, 'opsz' 24;
+    }
 
 .my-text-label {
     display: block;
@@ -55,9 +54,11 @@ body {
 
 /* Menu */
 
-.wrapper {
+.wrapper, #content {
     width: 100%;
+    height: 100%;
 }
+
 
 #sidebar {
     min-width: 270px;
