--- a/Codigo/Frota/FrotaWeb/wwwroot/css/form.css
+++ b/Codigo/Frota/FrotaWeb/wwwroot/css/form.css
@@ -17,7 +17,6 @@
     justify-content: center;
 }
 
-
 .cor {
     color: #03438b;
 }
@@ -168,4 +167,50 @@
     .botao-sucesso {
         margin-bottom: 10px;
     }
+}
+
+/* Select2 - alterando estilos */
+.select2-container--default {
+    width: 75%;
+    max-width: 75%;
+    text-align: center;
+    border-radius: 5px;
+    border-color: var(--bg) !important;
+}
+
+    .select2-container--default .select2-selection--single {
+        height: 3.5rem !important;
+        border: 1px solid var(--bg);
+        border-radius: 5px !important;
+        box-shadow: 0px 1px 2px var(--grey);
+        transition: border 0.2s, box-shadow 0.2s;
+        border-color: var(--bg) !important;
+    }
+
+        .select2-container--default .select2-selection--single .select2-selection__rendered,
+        .select2-container--default .select2-selection--single .select2-selection__placeholder {
+            text-align: center;
+            color: var(--grey);
+            border-color: var(--bg);
+            line-height: 3.5rem !important;
+        }
+
+    .select2-container--default .select2-results__option {
+        text-align: center;
+    }
+
+    .select2-container--default:hover .select2-selection--single {
+        box-shadow: 0px 0px 10px #8ab4e2;
+        border-color: #8ab4e2 !important;
+    }
+
+@media (max-width: 767px) {
+    .select2-container--default .select2-selection--single {
+        height: 3rem;
+    }
+
+        .select2-container--default .select2-selection--single .select2-selection__rendered,
+        .select2-container--default .select2-selection--single .select2-selection__placeholder {
+            font-size: 0.9rem;
+        }
 }
