--- a/Codigo/Frota/FrotaWeb/Views/Fornecedor/Create.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/Fornecedor/Create.cshtml
@@ -18,33 +18,33 @@
                 <span asp-validation-for="Id" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Nome" class="control-label"></label>
-                <input asp-for="Nome" class="form-control" />
-                <span asp-validation-for="Nome" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <label asp-for="Cnpj" class="control-label"></label>
-                <input asp-for="Cnpj" class="form-control" />
+                <input asp-for="Cnpj" class="form-control" id="cnpjInput" />
                 <span asp-validation-for="Cnpj" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Nome" class="control-label"></label>
+                <input asp-for="Nome" class="form-control" id="nomeEmpresaInput" />
+                <span asp-validation-for="Nome" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Cep" class="control-label"></label>
-                <input asp-for="Cep" class="form-control" />
+                <input asp-for="Cep" class="form-control" id="cepInput" />
                 <span asp-validation-for="Cep" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Rua" class="control-label"></label>
-                <input asp-for="Rua" class="form-control" />
+                <input asp-for="Rua" class="form-control" id="logradouroInput" />
                 <span asp-validation-for="Rua" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Bairro" class="control-label"></label>
-                <input asp-for="Bairro" class="form-control" />
+                <input asp-for="Bairro" class="form-control" id="bairroInput" />
                 <span asp-validation-for="Bairro" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Numero" class="control-label"></label>
-                <input asp-for="Numero" class="form-control" />
+                <input asp-for="Numero" class="form-control" id="numeroInput"/>
                 <span asp-validation-for="Numero" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -54,12 +54,12 @@
             </div>
             <div class="form-group">
                 <label asp-for="Cidade" class="control-label"></label>
-                <input asp-for="Cidade" class="form-control" />
+                <input asp-for="Cidade" class="form-control" id="cidadeInput"/>
                 <span asp-validation-for="Cidade" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Estado" class="control-label"></label>
-                <input asp-for="Estado" class="form-control" />
+                <input asp-for="Estado" class="form-control" id="estadoInput"/>
                 <span asp-validation-for="Estado" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -85,4 +85,42 @@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+
+    <script>
+        document.getElementById('cnpjInput').addEventListener('change', function () {
+            var cnpj = this.value.trim();
+            cnpj = cnpj.replace(/[^\d]+/g, '');
+            if (cnpj.length === 14) {
+                fetch(`/Fornecedor/ConsultaCnpj?cnpj=${cnpj}`, {
+                    method: 'GET',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    }
+                })
+                    .then(response => {
+                        if (response.ok) {
+                            return response.json();
+                        } else {
+                            throw new Error('Erro na consulta do CNPJ');
+                        }
+                    })
+                    .then(data => {
+                        if (!data.error) {
+                            document.getElementById('nomeEmpresaInput').value = data.fantasia;
+                            document.getElementById('logradouroInput').value = data.logradouro;
+                            document.getElementById('numeroInput').value = (data.numero === "S/N") ? "00" : data.numero;
+                            document.getElementById('bairroInput').value = data.bairro;
+                            document.getElementById('cidadeInput').value = data.municipio;
+                            document.getElementById('estadoInput').value = data.uf;
+                            document.getElementById('cepInput').value = data.cep.replace(/[^\d]/g, '');
+                        } else {
+                            alert('CNPJ não encontrado.');
+                        }
+                    })
+                    .catch(error => console.error('Erro:', error));
+            } else {
+                alert('CNPJ inválido. Certifique-se de que possui 14 dígitos.');
+            }
+        });
+    </script>
 }
