--- a/Codigo/Frota/FrotaWeb/Views/Fornecedor/Index.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/Fornecedor/Index.cshtml
@@ -8,9 +8,10 @@
         <link rel="stylesheet" href="~/css/Fornecedor/style_fornecedor_index.css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
     </head>
+
     <body>
         <header class="main_header">
-            <h1 class="section_title">Condutores</h1>
+            <h1 class="section_title">Fornecedores</h1>
             <a asp-action="Create"><i class="fas fa-plus"></i>Adicionar Fornecedor</a>
         </header>
         <main class="main_content container">
